treedbox_admin_menu.css
#wpwrap{
	overflow: hidden;
}
.folded #adminmenu li.menu-top{
	float: left;
}
.folded #adminmenuwrap, .folded #adminmenuback, .folded #adminmenu{
	width: 100%;
}
.folded #adminmenuwrap{
	position: relative;
}
.folded #adminmenuback{
	background: transparent;
}
.folded #adminmenu li.wp-menu-separator {
	display: none;
}
.folded #adminmenu{
	margin: 0;
}
.folded #adminmenu .opensub .wp-submenu,
.folded #adminmenu .wp-has-current-submenu .wp-submenu.sub-open,
.folded #adminmenu .wp-has-current-submenu a.menu-top:focus+.wp-submenu,
.folded #adminmenu .wp-has-current-submenu.opensub .wp-submenu,
.folded #adminmenu .wp-submenu.sub-open,
.folded #adminmenu a.menu-top:focus+.wp-submenu,
.no-js.folded #adminmenu .wp-has-submenu:hover .wp-submenu{
	top: 34px;
	left: 0;
}
#adminmenu .wp-submenu li:hover {
background-color: rgba(255,255,255,.2);
}
.folded #wpcontent, .folded #wpfooter{
	margin-left: 20px;
}
#wpbody{
	position:  inherit;
}

